# vicon_util

./: CMakeLists.txt  README.md  package.xml
config/: ekf.yaml
launch/: bundle_obstacles.launch  ekf.launch  example.launch  launch_ekfs.launch  spoof_vicon.launch
rviz/: example.rviz
scripts/: launch_ekfs.py
src/: obstacle_bundle_node.cpp  spoof_vicon_node.cpp  visualize_scene.cpp
