<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vicon_util</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="groot.oscar.de@gmail.com">r2c1</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>derived_object_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ros_tools</depend>

  <exec_depend>vicon_bridge</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
